[package]
name = "Gary"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
orca_whirlpools = "2.0.1"
orca_whirlpools_client = "2.0.2"
orca_whirlpools_core = "1.0.5"
serde_json = "1.0.140"
solana-client = "2.2.1"
solana-sdk = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token-2022 = "7.0.0"
tokio = "1.43.0"
tokio-retry = "0.3.0"
